<resources>
    <string name="app_name">ToDo!</string>
    <string name="action_settings">Settings</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="add_items">Add items.</string>
    <string name="enter_item">Enter item</string>
    <string name="quantity">Quantity</string>
    <string name="item_name">Item</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_quantity">Enter quantity</string>
    <string name="note">Note</string>
    <string name="enter_note">Enter note</string>
    <string name="add_to_reminder">Add To Reminder</string>
</resources>
